feat: add crypto service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,5 @@ security:
   refresh-token:
     jwk: ${REFRESH_TOKEN_JWK}
     expiration: ${REFRESH_TOKEN_EXPIRATION}
+  crypto:
+    aes-key-base64: ${AES_KEY_BASE64}
