--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	</developers>
 
 	<properties>
-		<java.version>25</java.version>
+		<java.version>23</java.version>
 	</properties>
 
 	<dependencies>
@@ -111,6 +111,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+					<mainClass>com.feniksovich.bankcards.BankCardsApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
