--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
     <build>
