--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yml
     contexts: default
     default-schema: public
+
+springdoc:
+  cache:
+    disabled: true
+
 security:
   access-token:
     jwk: ${ACCESS_TOKEN_JWK}
