--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
 springdoc:
   cache:
     disabled: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
 
 security:
   access-token:
